<resources>
    <string name="app_name">WheatherApp</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_help">Help</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_city">Add City</string>
    <string name="btn_add_city">Bookmark the marked location</string>
    <string name="weather_degree">%1$.2f \u2103 / %2$s</string>
    <string name="weather_fahrenheit">%1$.2f \u2109 / %2$s</string>
    <string name="background_image">Background Image</string>
    <string name="default_weather">30 ℃ / Sunny</string>
    <string name="default_city">Pune</string>
    <string name="default_wind">8 km/h</string>
    <string name="weather_placeholder">Weather : %1$.2f \u2103 / %2$s</string>
    <string name="weather_placeholder_fahrenheit">Weather : %1$.2f \u2109 / %2$s</string>
    <string name="wind_placeholder">Wind : %1$.2f km/h</string>
    <string name="wind_placeholder_fahrenheit">Wind : %1$.2f Miles/h</string>
    <string name="rain_precipitation_placeholder">Precipitation : %1$.2f</string>
    <string name="temp_degress">%1$.2f \u2103</string>
    <string name="temp_fahrenheit">%1$.2f \u2109</string>
</resources>