<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.android.wheatherapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/homeToCity"
            app:destination="@id/cityFragment" />
        <action
            android:id="@+id/homeToMap"
            app:destination="@id/mapsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.android.wheatherapp.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_help"
        android:name="com.android.wheatherapp.ui.help.HelpFragment"
        android:label="@string/title_help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/cityFragment"
        android:name="com.android.wheatherapp.ui.city.CityFragment"
        android:label="City"
        tools:layout="@layout/fragment_city" />
    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.android.wheatherapp.MapsFragment"
        android:label="fragment_maps"
        tools:layout="@layout/fragment_maps" />

</navigation>