<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ic_city_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/atv_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_city"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        android:padding="@dimen/padding_10"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/atv_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_placeholder"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:padding="@dimen/padding_10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/atv_city"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/atv_wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind_placeholder"
        android:textSize="30sp"
        android:textStyle="bold"
        android:padding="@dimen/padding_10"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/atv_weather"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/atv_rain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rain_precipitation_placeholder"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:padding="@dimen/padding_10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/atv_wind"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_forecast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

</androidx.constraintlayout.widget.ConstraintLayout>