<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/myCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="@dimen/card_radius"
    card_view:cardElevation="@dimen/card_elevation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_size"
        android:background="@drawable/ic_card_background"
        android:padding="@dimen/padding_10">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/background_image" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_remove"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_delete_selector"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/atv_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/default_weather"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/atv_city" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/atv_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_city"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
